Remove required fields from config

--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
 
 <input type='checkbox' name='chk_noshare' value='' />
 Do NOT share personal information<br />
-<span class='olr-label olr-required'>Phone 1:&nbsp;
+<span class='olr-label olr-required'>Phone Number (Mobile preferred for communication of changes and confromation):&nbsp;
 <input type='text' name='txt_phone1' value='' maxlength='12' />&nbsp;&nbsp; 
   <input type='radio' name='rad_phone1' value='Home' checked='checked' /> Home&nbsp;&nbsp;
   <input type='radio' name='rad_phone1' value='Cell' /> Cell&nbsp;&nbsp;
